# techalysis

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  launch_benchmark.sh  pyproject.toml  requirements-dev.txt
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
benches/: bench.rs  ema_bench.rs  sma_bench.rs
benches/python/: benchmark_timeit.py
benches/python/benchmarks/: __init__.py  bench_ema.py  bench_sma.py
benches/python/features/: ema.py  sma.py
benches/python/indicators/: __init__.py  ema.py  macd.py  rsi.py  sma.py
benches/rust/benchmarks/: macd.rs  sma.rs
benchmarks/: benchmark_timeit.py
benchmarks/features/: sma.py
benchmarks/python/: benchmark_timeit.py
benchmarks/python/pyperf_bench/: __init__.py  bench_bbands.py  bench_dema.py  bench_ema.py  bench_kama.py  bench_macd.py  bench_midpoint.py  bench_midprice.py  bench_roc.py  bench_rsi.py  bench_sma.py  bench_t3.py  bench_tema.py  bench_trima.py  bench_wma.py
benchmarks/python/timeit_bench/: __init__.py  bbands.py  dema.py  ema.py  kama.py  macd.py  midpoint.py  midprice.py  roc.py  rsi.py  sma.py  t3.py  tema.py  trima.py  wma.py
benchmarks/rust/: bench.rs
benchmarks/rust/indicators/: bench_bbands.rs  bench_dema.rs  bench_ema.rs  bench_kama.rs  bench_macd.rs  bench_midpoint.rs  bench_midprice.rs  bench_roc.rs  bench_rsi.rs  bench_sma.rs  bench_t3.rs  bench_tema.rs  bench_trima.rs  bench_wma.rs  mod.rs
core/: errors.rs  lib.rs  pybinding.rs
core/features/: ema.rs  rsi.rs  sma.rs
core/helper/: loopback.rs  macros.rs  mod.rs
core/indicators/: ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs
core/pybinding/: ema.rs  mod.rs  py_ema.rs  py_macd.rs  py_rsi.rs  py_sma.rs  sma.rs
core/tests/: helper.rs  mod.rs  oracle.rs
core/tests_helper/: assert.rs  oracle.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  traits.rs  types.rs
crates/core/src/indicators/: bbands.rs  dema.rs  ema.rs  kama.rs  macd.rs  midpoint.rs  midprice.rs  mod.rs  roc.rs  rsi.rs  sma.rs  t3.rs  tema.rs  trima.rs  wma.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs  py_bbands.rs  py_dema.rs  py_ema.rs  py_kama.rs  py_macd.rs  py_rsi.rs  py_sma.rs  py_t3.rs  py_tema.rs  py_trima.rs  py_wma.rs
examples/python/: adding.py  ema.py  macd.py  rsi.py  sma.py
examples/rust/features/: Cargo.toml
examples/rust/indicators/: Cargo.toml
fuzz/: Cargo.toml  run_all.sh
fuzz/fuzz_targets/: fuzz_ema.rs  fuzz_rsi.rs  fuzz_sma.rs
python/techalib/: maptypes.py
python/techalib/_core/: __init__.pyi  bbands.pyi  ema.pyi  kama.pyi  midpoint.pyi  midprice.pyi  roc.pyi  sma.pyi  t3.pyi  trima.pyi
python/techalysis/: __init__.py  maptypes.py
python/techalysis/_core/: __init__.pyi  bbands.pyi  dema.pyi  ema.pyi  macd.pyi  rsi.pyi  sma.pyi  t3.pyi  tema.pyi  trima.pyi  wma.pyi
python/technicalysis/: __init__.py  _core.pyi  core.pyi
python/technicalysis/_core/: __init__.pyi  macd.pyi
python/technicalysis/tests/: test_ema.py  test_sma.py
python/tests/: test_ema.py
src/: lib.rs
tests/: mod.rs
tests/data/oracle/: ema.csv  macd.csv  sma.csv
tests/fuzz/: Cargo.toml  run_all.sh  run_target.sh
tests/fuzz/fuzz_targets/: fuzz_bbands.rs  fuzz_dema.rs  fuzz_ema.rs  fuzz_kama.rs  fuzz_macd.rs  fuzz_midpoint.rs  fuzz_midprice.rs  fuzz_roc.rs  fuzz_rsi.rs  fuzz_sma.rs  fuzz_t3.rs  fuzz_tema.rs  fuzz_trima.rs  fuzz_wma.rs
tests/python/: conftest.py  test_bbands.py  test_dema.py  test_ema.py  test_kama.py  test_macd.py  test_midpoint.py  test_midprice.py  test_roc.py  test_rsi.py  test_sma.py  test_t3.py  test_tema.py  test_trima.py  test_wma.py
tests/rust/: Cargo.toml  mod.rs  test_ema.rs  test_sma.rs  tests_ema.rs  tests_macd.rs  tests_rsi.proptest-regressions  tests_rsi.rs  tests_sma.rs
tests/rust/proptest-regressions/: tests_rsi.txt
tests/rust/src/: lib.rs  tests_bbands.rs  tests_dema.rs  tests_ema.rs  tests_kama.rs  tests_macd.rs  tests_midpoint.rs  tests_midprice.rs  tests_roc.rs  tests_rsi.rs  tests_sma.rs  tests_t3.rs  tests_tema.rs  tests_trima.rs  tests_wma.rs
tests/rust/src/helper/: assert.rs  generated.rs  macros.rs  mod.rs
tests/rust/tests_helper/: assert.rs  mod.rs  oracle.rs
tools/: add_new_indicator.py  generate_testdata.py  oracle_datagen.py  rust_pre_commit.py
tools/templates/: README.md  bench_python_pyperf.template  bench_python_timeit.template  bench_rust.template  crate_core.template  crate_python.template  insert_fuzz_cargo.template  insert_pylib.template  python_stub.template  tests_fuzz.template  tests_python.template  tests_rust.template
tools/utils/: logger.py  ohlcv.py
