[package]
name = "techalib-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.techalib]
path = "../../crates/core"

[[bin]]
name = "sma"
path = "fuzz_targets/fuzz_sma.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ema"
path = "fuzz_targets/fuzz_ema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rsi"
path = "fuzz_targets/fuzz_rsi.rs"
test = false
doc = false
bench = false

[[bin]]
name = "macd"
path = "fuzz_targets/fuzz_macd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bbands"
path = "fuzz_targets/fuzz_bbands.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wma"
path = "fuzz_targets/fuzz_wma.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dema"
path = "fuzz_targets/fuzz_dema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tema"
path = "fuzz_targets/fuzz_tema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "trima"
path = "fuzz_targets/fuzz_trima.rs"
test = false
doc = false
bench = false
[[bin]]
name = "t3"
path = "fuzz_targets/fuzz_t3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kama"
path = "fuzz_targets/fuzz_kama.rs"
test = false
doc = false
bench = false

[[bin]]
name = "midpoint"
path = "fuzz_targets/fuzz_midpoint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "midprice"
path = "fuzz_targets/fuzz_midprice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roc"
path = "fuzz_targets/fuzz_roc.rs"
test = false
doc = false
bench = false
