[package]
name = "technicalysis-tests"

description.workspace = true
version.workspace = true
repository.workspace = true

license.workspace = true
authors.workspace = true

rust-version.workspace = true
edition.workspace = true

[dependencies]
csv = "1.3.1"
float-cmp = "0.10.0"
proptest = "1.6.0"
technicalysis = { path = "../../crates/core" }

[lib]
name = "technicalysis_tests"
path = "src/lib.rs"
